# buy-me-a-coffee

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build.yml  server.yml  web.yml
apps/database/: package.json  start.sh  stop.sh
apps/server/: .env.example  Dockerfile  build.sh  go.mod  go.sum  gqlgen.yml  makefile  package.json  server.go
apps/server/database/: db.go
apps/server/graph/: schema.graphqls  schema.resolvers.go
apps/web/: .env.example  .env.test  .eslintrc.js  Dockerfile  jest.config.js  next.config.js  package.json  tsconfig.json
apps/web/__tests__/components/: SEO.test.tsx
apps/web/__tests__/layouts/: CreatorLayout.tsx  DefaultLayout.tsx
apps/web/__tests__/pages/: [creator].test.tsx
apps/web/components/Cards/: Support.tsx
apps/web/components/Headers/: Creator.tsx
apps/web/layouts/: CreatorLayout.tsx  DefaultLayout.tsx
apps/web/lib/: consts.ts
apps/web/pages/: [creator].tsx  _app.tsx  index.tsx
apps/web/solana/: getUSDCTokenPublicKey.ts
programs/buy-me-a-coffee/: Cargo.toml
programs/buy-me-a-coffee/src/: lib.rs
scripts/: push.sh
tests/: buy-me-a-coffee.ts
web/: .env.example  .prettierignore  jest.config.js  package.json  tsconfig.json
web/__tests__/components/: SEO.test.tsx
web/__tests__/layouts/: CreatorLayout.test.tsx  Default.test.tsx
web/__tests__/pages/: [creator].test.tsx
web/components/: SEO.tsx
web/components/Navbars/: CreatorNavbar.tsx  IndexNavbar.tsx
web/layouts/: Creator.tsx  Default.tsx
web/pages/: [creator].tsx  _app.tsx  index.tsx
(+23 files in other folders)
